--- a/YeniParaMobile/Info.plist
+++ b/YeniParaMobile/Info.plist
@@ -6,37 +6,36 @@
   <key>NSAppTransportSecurity</key>
   <dict>
     <key>NSAllowsArbitraryLoads</key>
-    <true/>
-    <key>NSAllowsArbitraryLoadsInWebContent</key>
-    <true/>
-    <key>NSAllowsLocalNetworking</key>
-    <true/>
-    <key>UILaunchScreen</key>
-    <dict>
-        <key>UIColorName</key>
-        <string>BackgroundColor</string>
-        <key>UIImageName</key>
-        <string>logo</string>
-    </dict>
-
+    <false/>
     <key>NSExceptionDomains</key>
     <dict>
-      <key>127.0.0.1</key>
+      <key>yenipara.com</key>
       <dict>
-        <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+        <key>NSIncludesSubdomains</key>
+        <true/>
+        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+        <false/>
+        <key>NSExceptionRequiresForwardSecrecy</key>
         <true/>
       </dict>
-      <key>localhost</key>
+      <key>api.yenipara.com</key>
       <dict>
-        <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+        <key>NSIncludesSubdomains</key>
         <true/>
-      </dict>
-      <key>192.168.1.210</key>
-      <dict>
-        <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+        <false/>
+        <key>NSExceptionRequiresForwardSecrecy</key>
         <true/>
       </dict>
     </dict>
+  </dict>
+  
+  <key>UILaunchScreen</key>
+  <dict>
+    <key>UIColorName</key>
+    <string>BackgroundColor</string>
+    <key>UIImageName</key>
+    <string>logo</string>
   </dict>
 
   <key>NSLocalNetworkUsageDescription</key>
